# gtk-todo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  activate.c  add_data.c  c_todo  cli_handling.c  cmake_install.cmake  compile_commands.json  connect_db.c  db.c  db_init.c  main.c  messages.c  siema.md  structs.c  style.css  task_handling.c  task_loading.c  test.c  test.md  todo.db
.cache/clangd/index/: main.c.BF1158C55542EB9F.idx  structs.h.C5501EC5F661656C.idx
include/: activate.h  add_data.h  cli_handling.h  connect_db.h  db_init.h  messages.h  structs.h
src/: activate.c  cli_handling.c  db_init.c  main.c  messages.c  task_handling.c  task_loading.c
src/include/: activate.h  cli_handling.h  db_init.h  global.h  main.h  structs.h  task_drawing.h  task_handling.h  task_loading.h
src/include/utils_h/: date_validator.h  db_error.h  dump_to_file.h  first_time_launch.h  genv_detect.h  get_main_dir.h  initial_task_loading.h  messages.h
src/utils/: date_validator.c  db_error.c  dump_to_file.c  first_time_launch.c  genv_detect.c  get_main_dir.c  messages.c
